gitops/longhorn-ui-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
  labels:
    app: longhorn-ui
spec:
  type: LoadBalancer
  loadBalancerIP: 10.8.24.105
  selector:
    app: longhorn-ui
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
