gitops/speedtest-tracker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: gitops
  labels:
    app: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: speedtest-tracker-config
              mountPath: /config
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: speedtest-tracker-config
          persistentVolumeClaim:
            claimName: speedtest-tracker-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: gitops
  labels:
    app: speedtest-tracker
spec:
  type: LoadBalancer
  loadBalancerIP: 10.8.24.104
  selector:
    app: speedtest-tracker
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
