gitops/traefik-service-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
spec:
  type: LoadBalancer
  loadBalancerIP: 10.8.24.103
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-kube-system
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: websecure
