gitops/drawdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drawdb
  namespace: gitops
  labels:
    app: drawdb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: drawdb
  template:
    metadata:
      labels:
        app: drawdb
    spec:
      containers:
        - name: drawdb
          image: ghcr.io/lidsol/drawdb:main
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: drawdb
  namespace: gitops
  labels:
    app: drawdb
spec:
  selector:
    app: drawdb
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drawdb-ingress
  namespace: gitops
  annotations:
    cert-manager.io/issuer: "https-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - db.lidsol.unam.mx
    secretName: httpsdrawdb-tls
  rules:
  - host: db.lidsol.unam.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drawdb
            port:
              number: 3000
