gitops/website-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: gitops
  labels:
    app: website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: website
          image: ghcr.io/lidsol/sitio-web-lidsol:master
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: gitops
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: gitops
  annotations:
    cert-manager.io/cluster-issuer: "https-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - lidsol.unam.mx
    secretName: httpswebsite-tls
  rules:
  - host: lidsol.unam.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 8080
